--- a/ferticonnectmedecin-cabine.html
+++ b/ferticonnectmedecin-cabine.html
@@ -30,7 +30,7 @@
 
 
         <div class="optionsnavbar" id="loggouut_nav">
-            <i class="bi bi-gear-wide-connected"></i>
+            <i class="bi bi-box-arrow-right"></i>
         </div>
 
 
