--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -32,10 +32,14 @@
         </div>
 
 
-        <div class="optionsnavbar" id="loggouut_nav">
-            <i class="bi bi-gear-wide-connected"></i>
-        </div>
 
+        <div class="optionsnavbar" >
+            <i class="bi bi-box-arrow-right" id="loggouut_nav"></i>
+            <div class="optionsnavbar" id="shercheBtn" style="display: none;">
+                <i class="bi bi-search-heart"></i>
+            </div>
+        </div>
+ 
 
 
     </div>
