--- a/ferticonnectmedecin-profilepage.html
+++ b/ferticonnectmedecin-profilepage.html
@@ -35,7 +35,7 @@
 
 
         <div class="optionsnavbar" id="loggouut_nav">
-            <i class="bi bi-gear-wide-connected"></i>
+            <i class="bi bi-box-arrow-right"></i>
         </div>
 
 
