--- a/searchBr.html
+++ b/searchBr.html
@@ -27,7 +27,7 @@
             <div class="logonav">
                 <img src="img/ferticonnectiLogoGreen.svg" alt="">
             </div>
-            <h1 id="ferticonnect_name_text"> </h1>
+            <h1 id="ferticonnect_name_text"></h1>
         </div>
 
 
@@ -42,16 +42,16 @@
     <section class="bagshearch">
 
         <div class="seracherbackground">
-            <h1 id="chercherici">Chercher un médecin</h1>
-            <p id="nomdemedcin">Écrire le nom du médecin et il s'affichera ici dans les suggestions. Choisissez-en un.</p>
-            <input type="text" id="search-bar" placeholder="Rechercher un médecin...">
+            <h1 id="chercherici"></h1>
+            <p id="nomdemedcin"></p>
+            <input type="text" id="search-bar" placeholder="">
         </div>
         <div class="suggebackground"></div>
 
         <div class="ligne_"></div>
         <div class="toutlemedecinbackground" id="toutlemedecinbackground">
-            <h1 id="toutlesmedecinh1">Tous les médecins sur Ferticonnect</h1>
-            <p id="toutlesmedcinp">Voici tous les médecins sur Ferticonnect. Vous pouvez voir ici tous les médecins enregistrés sur notre plateforme.</p>
+            <h1 id="toutlesmedecinh1"></h1>
+            <p id="toutlesmedcinp"></p>
         </div>
 
     </section>
