--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -19,7 +19,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 
-
 </head>
 <body>
     
@@ -309,9 +308,12 @@
                 </button>
             </form>
             <br>
+            <p id="resendlecode" style="text-decoration: underline;">reenvoiyer le code</p>
+            <br>
             <p id="infoActv"></p>
             <p><p id="noactvaccuntexit"></p><a href="#" id="deconnecter_acv_msg"></a></p>
             <br>
+
             <p id="message_cerification"></p>
         </div>
         <div class="boxactivation" id="boxactivation_done" style="display: none; flex-direction: column;">
