--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -444,7 +444,7 @@
                 </button>
             </form>
             <br>
-            <p id="resendlecode" style="text-decoration: underline;">reenvoiyer le code</p>
+            <p id="resendlecode" style="text-decoration: underline; cursor: pointer;"></p>
             <br>
             <p id="infoActv"></p>
             <p><p id="noactvaccuntexit"></p><a href="#" id="deconnecter_acv_msg"></a></p>
