--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -33,10 +33,11 @@
 
 
         <div class="optionsnavbar" >
-            <i class="bi bi-box-arrow-right" id="loggouut_nav"></i>
             <div class="optionsnavbar" id="shercheBtn" style="display: none;">
                 <i class="bi bi-search-heart"></i>
             </div>
+            <i class="bi bi-box-arrow-right" id="loggouut_nav"></i>
+
         </div>
  
 
@@ -129,8 +130,11 @@
                         <img class="divimg" src="img/undraw_medical_research_qg4d.svg" alt="">
 
                     </div>
+                    <br>
+                    <p id="pathologydiscreption"></p>
+                    <br>
+                    <p id="maladeTitle1" style="color: #176561 ;font-weight: 600; font-size: 1.4rem; text-decoration: underline; cursor: pointer;" > <i class="bi bi-envelope-paper-heart"></i> -> Endométriose</p>
 
-                    <p style="color: red;font-weight: 600;">Cette fonctionnalité est en cours de développement.</p>
 
                 </div>
             </div>
@@ -375,6 +379,29 @@
             </div>
 
         </div>
+    </div>
+    <div class="quinousbg" id="quinousbg" style="display: none;">
+        <div class="quinousbg2">
+            <div class="quinousbgHeader">
+                <img src="img/ferticonnectiLogoGreen.svg" alt="">
+                <h1 id="quinousbgHeadertext"></h1>
+
+            </div>
+            <h1>Endométriose</h1>
+
+            <p class="pesentationquinous" id="pesentationquinous_pathologie">
+            </p>
+
+
+
+            <div id="buttonnext6">
+                <button class="btn supprimer" id="closephatology"></button>
+            </div>
+
+            
+            
+        </div>
+
     </div>
     <div class="navbar_buttom" id="navbar_buttom"style="display: none;">
         <div class="iconnavbar">
