--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -87,6 +87,27 @@
             <br>
             <div class="ligne_"></div>
             <br>
+
+
+            <div class="mycabinsbg" id="mycabinsbgMarket"  style="height: auto;">
+                <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbgMarket">
+                    <i class="bi bi-shop"></i>
+                    <h2 id="market"></h2>
+                </div>
+                <div class="mescabins_" id="mescabins_Market" style="display: none;">
+                    <div class="divnoamis">  
+                            <img class="divimg" src="img/undraw_shopping_app_flsj.svg" alt="">
+                    </div>
+
+                    <p style="color: red;font-weight: 600;">Cette fonctionnalité est en cours de développement.</p>
+
+                
+                </div>
+            </div>
+
+            <br>
+            <div class="ligne_"></div>
+            <br>
             <div class="mycabinsbg" id="mycabinsbg66"  style="height: auto;">
                 <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbg66">
                     <i class="bi bi-arrow-repeat"></i>
